# uv-app-template

./: Dockerfile  main.py  pyproject.toml
.github/workflows/: test.yml
tests/: syntax_test.py
